[package]
name = "chandler-cli"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chandler"
path = "src/main.rs"

[dependencies]
chandler = { path = "../lib" }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.22", features = ["derive"] }
ctrlc = "3.2.3"
indicatif = "0.17.0"
once_cell = "1.13.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.3"
toml_edit = { version = "0.14.4", features = ["easy"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
