[package]
name = "chandler-cli"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chandler"
path = "src/main.rs"

[dependencies]
chandler = { path = "../lib" }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.27", features = ["derive"] }
ctrlc = "3.2.3"
indicatif = "0.17.2"
once_cell = "1.16.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
strum = "0.24.1"
strum_macros = "0.24.3"
toml_edit = { version = "0.17.1", features = ["easy"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
