[package]
name = "chandler-cli"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chandler"
path = "src/main.rs"

[dependencies]
chandler = { path = "../lib" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = "3.4.1"
indicatif = "0.17.7"
once_cell = "1.18.0"
regex = "1.10.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
toml = "0.8.2"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
