[package]
name = "chandler"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
dirs = "4.0.0"
html5ever = "0.26.0"
kuchiki = { git = "https://github.com/kuchiki-rs/kuchiki.git", rev = "d218ccb1bf79616ff2f0b7eb1f1262fef1274c66" }
once_cell = "1.13.1"
os_info = "3.5.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
sysinfo = "0.26.0"
thiserror = "1.0.32"
toml_edit = { version = "0.14.4", features = ["easy"] }
tracing = "0.1.36"
url = "2.2.2"
