[package]
name = "chandler"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
dirs = "4.0.0"
html5ever = "0.26.0"
kuchiki = { git = "https://github.com/kuchiki-rs/kuchiki.git", rev = "d218ccb1bf79616ff2f0b7eb1f1262fef1274c66" }
once_cell = "1.16.0"
os_info = "3.5.1"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking", "gzip"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
sysinfo = "0.27.7"
thiserror = "1.0.37"
toml_edit = { version = "0.15.0", features = ["easy"] }
tracing = "0.1.37"
url = "2.3.1"
