[package]
name = "chandler"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0.1"
html5ever = "0.26.0"
kuchikiki = "0.8.2"
once_cell = "1.18.0"
os_info = "3.7.0"
regex = "1.10.0"
reqwest = { version = "0.11.22", features = ["blocking", "gzip"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
sysinfo = "0.29.10"
thiserror = "1.0.49"
toml = "0.8.2"
tracing = "0.1.39"
url = "2.4.1"
