[package]
name = "chandler-pcli"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandler = { path = "../lib" }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0", features = ["derive"] }
fern = "0.6.0"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
strum = "0.22.0"
strum_macros = "0.22.0"
