[package]
name = "chandler-pcli"
version = "3.0.1"
authors = ["Forb.Jok <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandler = { path = "../lib" }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.27", features = ["derive"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
strum = "0.24.1"
strum_macros = "0.24.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
